# CAML

./: .gitignore  CITATION.cff  README.md  pyproject.toml
src/: demo.py
src/aggregation/: cluster_model_trainer.py  fitted_global_forecasting_model.py  model_aggregation.py
src/aggregation/objective_factories/: extratrees_objective_factory.py  lightgbm_objective_factory.py  nbeats_objective_factory.py  objective_factory.py  xgboost_objective_factory.py
src/aggregation/utils/: io.py  pytorch_lightning_pruning_callback.py  smape.py
src/clustering/: model_clustering.py
src/distance/: distance.py  pairwise_loss_distance.py
src/evaluation/: clustering_evaluator.py  timeseries_clustering_evaluator.py  timeseries_model_evaluator.py
src/loader/: data_loader.py  model_data.py
