[tool.poetry]
name = "caml"
version = "0.1.0"
description = "Source code for the paper \"A Few Models to Rule Them All: Aggregating Machine Learning Models\" at LWDA 2023"
authors = ["Florian Siepe <flo.siepe@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pre-commit = "^2.19.0"
lightgbm = "^3.3.3"
xgboost = "^1.7.1"
catboost = "^1.1.1"
pyarrow = "^10.0.1"
seaborn = "^0.12.1"
black = { extras = ["d"], version = "^22.12.0" }
deprecation = "^2.1.0"
fastcluster = "^1.2.6"
optuna = "^3.1.1"
darts = "^0.24.0"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
